Update dockerfile to support java 11 (#24)